<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menuitem_split_vertically" android:title="@string/split_vertically"></item>
    <item android:id="@+id/menuitem_split_horizontally" android:title="@string/split_horizontally"></item>
    <item android:id="@+id/menuitem_insert_button" android:title="@string/insert_button"></item>
			<item android:id="@+id/menuitem_set_server2" android:title="@string/set_server"/>
			<item android:id="@+id/menuitem_import_settings2" android:title="@string/import_settings"/>
			<item android:id="@+id/menuitem_export_settings2" android:title="@string/export_settings"/>
			<item android:id="@+id/menuitem_reset2" android:title="@string/reset"/>
			<item android:id="@+id/menuitem_save2" android:title="@string/save"/>

</menu>
